libs/bng/test/negative/N0100_molecule_type_bond.bngl
# FAIL
# OUTPUT: error: Definition of a component in the molecule types section must not have a bond, error for '!+'
# OUTPUT: error: Definition of a component in the molecule types section must not have a bond, error for '!1'


begin molecule types
   A(a!+)
   B(z!1)
end molecule types
